# Compiler-For-Rust

./: Cargo.toml  README.md  test.ir
crates/compiler-backend/: Cargo.toml
crates/compiler-backend/src/: lib.rs  lower.rs
crates/compiler-cli/: Cargo.toml
crates/compiler-cli/src/: lib.rs  main.rs
crates/compiler-common/: Cargo.toml
crates/compiler-common/src/: lib.rs  statement.rs  token.rs
crates/compiler-frontend/: Cargo.toml
crates/compiler-frontend/src/: lib.rs  parser.rs  token.rs  tokenizer.rs
crates/compiler-ir/: Cargo.toml
crates/compiler-ir/src/: ir.rs  ir_print.rs  lib.rs
docs/: WORKSPACE_STRUCTURE.md
docs/dev_journal/: Samii.md
docs/rust_learning/intro_cargo/src/: main.rs
docs/rust_learning/intro_rustc/: rustHello.rs
docs/rust_learning/primitives/: primitives.rs
main/: enums.rs
src/: ir.rs  ir_print.rs  lib.rs  lower.rs  main.rs  parser.rs  statement.rs  statment.rs  token.rs  tokenizer.rs
tests/: test_lib.rs  test_main.rs  test_token.rs  test_tokenizer.rs
tests/ir_stuff/: ir441
tests/unit_tests/: test_main.rs
