[package]
name = "compiler-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "compiler"
path = "src/main.rs"

[dependencies]
compiler-common = { path = "../compiler-common" }
compiler-frontend = { path = "../compiler-frontend" }
compiler-ir = { path = "../compiler-ir" }
compiler-backend = { path = "../compiler-backend" }
